src/objects/FieloAlpha__RuleCriteria__c.object
<CustomObject>
    <description>Criteria to be met by a transaction for a rule to be applied.</description>
    <fields>
        <fullName>FieloPLT__BooleanValue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Boolean Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__DateValue__c</fullName>
        <label>Date Value</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__FieldName__c</fullName>
        <label>Field Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__FieldType__c</fullName>
        <label>Field Type</label>
        <picklist>
            <picklistValues>
                <fullName>String</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Number</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boolean</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Field__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Name__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; + Id, FieloPLT__FieldName__c + &apos; &apos; +   Text(FieloPLT__Operator__c ) + &apos; &apos; +  FieloPLT__Values__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__NumberValue__c</fullName>
        <label>Number Value</label>
        <precision>16</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Operator__c</fullName>
        <label>Operator</label>
        <picklist>
            <picklistValues>
                <fullName>equals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>not equals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>less than</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>less or equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>greater than</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>greater or equal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>contains</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>not contains</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Order__c</fullName>
        <label>Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Rule__c</fullName>
        <label>Rule</label>
        <referenceTo>FieloPLT__Rule__c</referenceTo>
        <relationshipLabel>Rule Criterias</relationshipLabel>
        <relationshipName>RuleCriterias</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Values__c</fullName>
        <label>Values</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Rule Criteria</label>
    <nameField>
        <displayFormat>RC-{0000}</displayFormat>
        <label>Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rule Criterias</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>FieloPLT__Empty_Field_Criteria</fullName>
        <active>true</active>
        <errorConditionFormula>FieloPLT__Field__c &amp;&amp; ISBLANK( FieloPLT__Values__c )</errorConditionFormula>
        <errorMessage>The criteria must have a field selected</errorMessage>
    </validationRules>
</CustomObject>